--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,29 +2,28 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="ISO-8859-1">
-	<title>CRM</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script>
-		$(document).ready(function () {
-			$('.department-form').submit(function (event) {
-				// Prevent default form submission
-				event.preventDefault();
+    <meta charset="ISO-8859-1">
+    <title>CRM</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+			$('.send-email-button').submit(function (event) {
+                event.preventDefault();
 				// Serialize form data
 				var formData = $(this).serialize();
-
-				// Send AJAX request
 				$.ajax({
 					type: "POST",
 					url: $(this).attr('action'),
 					data: formData,
 					success: function (response) {
 						// Extract message from the response
-						var message = $(response).find('#responseText').text();
-						// Update UI with response message
-						$('#display').html(message);
+                $('#emailModal input[name="emailId"]').val(response);
+                $('#emailModal').modal('show');
 					},
 					error: function (xhr, status, error) {
 						// Handle error
@@ -32,80 +31,144 @@
 					}
 				});
 			});
-		});
-	</script>
-	<style>
-		.center {
-		  text-align: center;
-		  color: green;
-		  font-weight: bold;
-		}
-		</style>
+     
+            // Event listener for the modal form submission
+            $('.sendEmailForm').submit(function (event) {
+                event.preventDefault();
+                var modalFormData = $(this).serialize();
+                $('#emailModal').modal('hide');
+                $.ajax({
+                    type: "POST",
+                    url: $(this).attr('action'),
+                    data: modalFormData,
+                    success: function (response) {
+                        var message = $(response).find('#responseText').text();
+                        $('#emailResponse').html(message);
+                        
+                    },
+                    error: function (xhr, status, error) {
+                        console.error(error);
+                    }
+                });
+            });
+        });
+    </script>
+    <style>
+        .center {
+            text-align: center;
+            color: green;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
-	<div th:insert="~{fragments/navbar :: navbar}"> </div>
-	<!-- <div th:insert="~{message :: message-content}"> </div>-->
-	
-	<div class="container">
-		<div id="message-div">
-			<p class="center" id="display"></p>
-		</div>
-		<hr>
-		<form action="#" th:action="@{/getDepartmentDetails}" th:object="${department}" method="POST">
-			<label for="status">Choose Status</label>
-			<select class="form-control mb-4 col-4" th:field="*{status}" onchange="this.form.submit()">
-				<option th:each="status:${deptStatus}" th:text="${status.status}" th:value="${status.statusId}">
-				</option>
-			</select>
-			<button type="submit" class="btn btn-info col-2">Get Department Details</button>
-		</form>
-		<hr>
+    <div th:insert="~{fragments/navbar :: navbar}"> </div>
 
-		<table style="width:100%" border="2" class="table table-striped table-responsive-md">
-			<thead>
-				<tr>
-					<th>State Name</th>
-					<th>County Name</th>
-					<th>Department Name</th>
-					<th>Status</th>
-					<th>Comments</th>
-					<th>Follow Up On</th>
-					<th>Do you want to send a remainder?</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="department : ${allDepartmentList}">
-					<form class="department-form" th:action="@{/sendEmail}" method="post">
-						<p th:text="${message}">Default message if nothing is passed</p>
-						<td style="display:none;">
+    <div class="container">
+        <div id="message-div">
+            <p class="center" id="emailResponse"></p>
+        </div>
+        <hr>
+        <form action="#" id="deptDetails" th:action="@{/getDepartmentDetails}" th:object="${department}" method="POST">
+            <label for="status">Choose Status</label>
+            <select class="form-control mb-4 col-4" th:field="*{status}" onchange="this.form.submit()">
+                <option th:each="status:${deptStatus}" th:text="${status.status}" th:value="${status.statusId}">
+                </option>
+            </select>
+        </form>
+        <hr>
+
+        <table style="width:100%" border="2" class="table table-striped table-responsive-md">
+            <thead>
+                <tr>
+                    <th>State Name</th>
+                    <th>County Name</th>
+                    <th>Department Name</th>
+                    <th>Status</th>
+                    <th>Comments</th>
+                    <th>Follow Up On</th>
+                    <th>Do you want to send a reminder?</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="department : ${selectedDepartmentList}">
+                    <form th:action="@{/getEmailAddress}" method="post" class = "send-email-button">
+                        <p th:text="${message}">Default message if nothing is passed</p>
+                        <td style="display:none;">
                             <input type="hidden" th:name="departmentId" th:value="${department.departmentId}">
                         </td>
-						<td style="display:none;">
+                        <td style="display:none;">
                             <input type="hidden" th:name="countyId" th:value="${department.county.countyId}">
                         </td>
-						 <td style="display:none;">
+                        <td style="display:none;">
                             <input type="hidden" th:name="stateId" th:value="${department.state.stateId}">
-                        </td> 
-						<td><input type="hidden" th:name="stateName" th:value="${department.state.stateName}"
-								th:text="${department.state.stateName}"></td>
-						<td><input type="hidden" th:name="countyName" th:value="${department.county.countyName}"
-								th:text="${department.county.countyName}"></td>
-						<td><input type="hidden" th:name="departmentName" th:value="${department.departmentName}"
-								th:text="${department.departmentName}"></td>
-						<td><input type="hidden" th:name="status" th:value="${department.status.status}"
-								th:text="${department.status.status}"></td>
-						<td><input type="hidden" th:name="comments" th:value="${department.comments}"
-								th:text="${department.comments}"></td>
-						<td><input type="hidden" th:name="reminderDate" th:value="${department.reminderDate}"
-								th:text="${department.reminderDate}"></td>
-						<td class="text-center"><button type="submit" class="btn btn-outline-primary btn-xs">Send
-								Now!!!</button></td>
-					</form>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+                        </td>
+                        <td><input type="hidden" th:name="stateName" th:value="${department.state.stateName}"
+                                th:text="${department.state.stateName}"></td>
+                        <td><input type="hidden" th:name="countyName" th:value="${department.county.countyName}"
+                                th:text="${department.county.countyName}"></td>
+                        <td><input type="hidden" th:name="departmentName" th:value="${department.departmentName}"
+                                th:text="${department.departmentName}"></td>
+                        <td><input type="hidden" th:name="status" th:value="${department.status.status}"
+                                th:text="${department.status.status}"></td>
+                        <td><input type="hidden" th:name="comments" th:value="${department.comments}"
+                                th:text="${department.comments}"></td>
+                        <td><input type="hidden" th:name="reminderDate" th:value="${department.reminderDate}"
+                                th:text="${department.reminderDate}"></td>
+                        <td class="text-center"><button type="submit"
+                                class="btn btn-outline-primary btn-xs ">Send
+                                Now!!!</button></td>
+                    </form>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="emailModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <form class="sendEmailForm" th:action="@{/sendEmail}" method="post">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="emailModalLabel">Send Email</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="emailId">To:</label>
+                            <input type="text" id="emailId" name="emailId"  class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="cc">CC:</label>
+                            <input type="text" id="cc" name="cc" placeholder="CC"  class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="bcc">BCC:</label>
+                            <input type="text" id="bcc" name="bcc" placeholder="BCC"  class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Subject:</label>
+                            <input type="text" placeholder="Subject" name="subject"  id="subject" 
+                                class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="content">Description:</label>
+                            <textarea class="form-control" rows="5"  id = "content" name= "content" placeholder="Email Content" ></textarea>
+
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Send Email</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
