--- a/src/main/resources/templates/newDepartment.html
+++ b/src/main/resources/templates/newDepartment.html
@@ -43,7 +43,7 @@
 	<div th:insert="~{fragments/navbar :: navbar}"> </div>
 
 	<div class="container">
-
+		
 		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -66,7 +66,9 @@
 		</div>
 		<hr>
 		<h2 align="center">Add New Department</h2>
-
+		<div th:if="${successMessage}" class="alert alert-success" role="alert">
+            <span th:text="${successMessage}"></span>
+        </div>
 		<form action="#" th:action="@{/addDepartment}" th:object="${department}" method="POST">
 			<label for="status">Choose Status</label> &nbsp;&nbsp;&nbsp;
 			<i class="fas fa-plus" style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal"
