--- a/src/main/resources/templates/newState.html
+++ b/src/main/resources/templates/newState.html
@@ -7,11 +7,15 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
+<link th:href="@{css/main.css}" rel="stylesheet" />
 </head>
 <body>
 	<div th:insert="~{fragments/navbar :: navbar}">  </div>
 	<div class="container">
 		<h2 align = "center">New State</h2>
+        <div th:if="${successMessage}" class="alert alert-success" role="alert">
+            <span th:text="${successMessage}"></span>
+        </div>
 		<form action="#" th:action="@{/addState}" th:object="${state}"
 			method="POST">
 			<label for="stateCode">State Code</label> 
