--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>NavigationBar</title>
-
 </head>
 <body>
 
@@ -12,6 +11,7 @@
         <div class="navbar-header">
             <a class="navbar-brand" th:href="@{/}">CRM</a>
         </div>
+        <h2 align="center" style="color: aqua;" th:text="${pageTitle}">Page Title</h2>
         <ul class="nav navbar-nav">
             <li><a class="nav-link" th:href="@{/addState}">State
             </a></li>
