--- a/src/main/resources/templates/updateDept.html
+++ b/src/main/resources/templates/updateDept.html
@@ -4,8 +4,9 @@
 <meta charset="ISO-8859-1">
 <title>CRM</title>
 
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -41,9 +42,29 @@
 <body>
 	<div th:insert="~{fragments/navbar :: navbar}">  </div>
 	<div class="container">
-		<hr>
-		<h2 align = "center">Update Department</h2>
-
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h1 class="modal-title fs-5" id="exampleModalLabel">New Status</h1>
+					</div>
+					<div class="modal-body">
+						<form th:action="@{/addStatus}" method="post">
+							<div class="mb-3">
+								<label for="status" class="col-form-label">Status:</label>
+								<input type="text" name="status" placeholder="Status" class="form-control mb-4 col-4"
+									required>
+							</div>
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							<button type="submit" class="btn btn-primary">Save Status</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div th:if="${successMessage}" class="alert alert-success" role="alert">
+            <span th:text="${successMessage}"></span>
+        </div>
 		<form action="#" th:action="@{/addDepartment}" th:object="${department}"
 			method="POST">
 			<input type="hidden" th:field="*{departmentId}" />
